# awsc

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  doc.sh  format.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: doc.yaml  lint.yaml
src/: conf.py  test.py
src/awsc/: __init__.py  __main__.py  arn.py  aws.py  base_control.py  commander.py  common.py  context.py  dashboard.py  fsbrowser.py  hotkey.py  info.py  log.py  main.py  meta.py  port_forward.py  region.py  resource_ami.py  resource_asg.py  resource_beanstalk.py  resource_cfn.py  resource_cloudwatch.py  resource_cloudwatch_logs.py  resource_common.py  resource_dsg.py  resource_ebs.py  resource_ec2.py  resource_ec2_class.py  resource_eks.py  resource_iam.py  resource_iam_group.py  resource_iam_instance_profile.py  resource_iam_policy.py  resource_iam_role.py  resource_iam_user.py  resource_keypair.py  resource_lb.py  resource_lc.py  resource_listener.py  resource_lister.py  (+16 more)
src/awsc/config/: config.py  scheme.py  storage.py
src/awsc/termui/: alignment.py  bar_graph.py  block.py  color.py  common.py  control.py  dialog.py  list_control.py  screen.py  text_browser.py  ui.py
