[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awsc"
dynamic = ["version"]
dependencies = [
    #"tooling_common @ git+ssh://git@gitlab.aws.mbh-platform.com/foundation/operations/tooling-common.git",
    "blessed",
	"cryptography>=39.0.2",
	"puremagic",
	"chardet==5.0.0",
	"pyyaml>=6.0.0",
	"boto3",
	"jq==1.8.0a2",
	"pyperclip==1.8.1",
	"pygments>=2.14.0",
	"numpy",
	"packaging",
	"watchdog",
	"python-keycloak"
]

[project.scripts]
awsc = "awsc:main"

[tool.hatch.version]
path = "src/awsc/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/awsc"]
"src/awsc" = ["awsc"]
